fix(signup): alignment and margins

--- a/source/stylesheets/master.css
+++ b/source/stylesheets/master.css
@@ -455,6 +455,10 @@ a.btn-default[role="button"]:hover {
     font-size: 5rem;
   }
 
+  .highlight {
+    margin-bottom: 60px;
+  }
+
   .highlight-section {
     margin-top: 0px;
     flex-direction: column;
@@ -471,5 +475,15 @@ a.btn-default[role="button"]:hover {
 
   main h1 {
     margin: 0;
+  }
+
+  .signup {
+    margin-top: 0;
+    padding-top: 30px;
+    padding-bottom: 60px;
+  }
+
+  .signup .msg {
+    text-align: left;
   }
 }
